@@ -1496,13 +1496,13 @@ anywhere in the listing:</p>
 <p>The following options are available:</p>
 <ul>
 <li><b>Set PC @ current line</b>: Set the Program Counter to the address of the
-disassembly line where the mouse was clicked (highlighted in yellow).</li>
+disassembly line where the mouse was clicked.</li>
 
 <li><b>RunTo PC @ current line</b>: Single-step through code until the Program Counter
-matches the address of the disassembly line where the mouse was clicked (highlighted in yellow)</li>
+matches the address of the disassembly line where the mouse was clicked.</li>
 
-<li><b>Re-disassemble</b>: Self-explanatory; force the current bank to be
-disassembled, regardless of whether anything has changed.</li>
+<li><b>Disassemble @ current line</b>: Disassemble from the disassembly line where the mouse was clicked.
+This allows to fill gaps in the disassembly and is most useful for bankswitched ROMs.</li>
 
 <li><b>Show tentative code</b>: Allow Distella to do a static analysis/disassembly.</li>
 
